@@ -1,5 +1,5 @@
 .\" Man page generated from reStructeredText.
-.TH groups.conf 5 "2010-04-08" "1.3" "ClusterShell User Manual"
+.TH groups.conf 5 "2010-06-16" "1.3" "ClusterShell User Manual"
 .SH NAME
 groups.conf \- Configuration file for ClusterShell external node groups
 
@@ -45,8 +45,8 @@ General options definition
 
 
 .TP
-.B \fIGroup_namespace\fP
-External commands definition for namespace \fIGroup_namespace\fP (map, all, list and reverse)
+.B \fIGroup_source\fP
+External commands definition for group source \fIGroup_source\fP (map, all, list and reverse)
 
 .UNINDENT
 
@@ -57,13 +57,13 @@ Configuration parameters of the \fBMain\fP section are described below.
 
 .TP
 .B default
-Specify the default group namespace used by the NodeSet parser when the
-user does not specify explicitly the namespace (eg. "@io").
+Specify the default group source used by the NodeSet parser when the
+user does not specify explicitly the group source (eg. "@io").
 
 .UNINDENT
 
-.SS \fIGroup_namespace\fP
-Configuration parameters of each group namespace section are described below.
+.SS \fIGroup_source\fP
+Configuration parameters of each group source section are described below.
 
 .INDENT 0.0
 
@@ -78,14 +78,15 @@ command.
 .TP
 .B all
 Optional external shell command that should return a nodeset, list of
-nodes or list of nodeset of all nodes for this group namespace. If not
-specified, the library will try to resolve the group named \fBall\fP (@all).
+nodes or list of nodeset of all nodes for this group source. If not
+specified, the library will try to resolve all nodes by using the \fBlist\fP
+external command in the same group source followed by \fBmap\fP for each group.
 
 
 .TP
 .B list
 Optional external shell command that should return the list of all groups
-for this group namespace (separated by space characters or by carriage
+for this group source (separated by space characters or by carriage
 returns).
 
 
@@ -105,6 +106,10 @@ group, the user will not receive any error when trying to resolve such unknown
 group.  The desired behaviour is up to the system administrator.
 
 
+.SH RESOURCE USAGE
+All external command results are cached in memory to avoid multiple calls.
+
+
 .SH EXAMPLES
 Simple configuration file for local groups and slurm partitions binding.
 
@@ -119,11 +124,9 @@ default: local
 .br
 [local]
 .br
-map: awk \-F: \'/^$GROUP:/ {print $2}\' /etc/clustershell/groups
+map:  awk \-F: \'/^$GROUP:/ {print $2}\' /etc/clustershell/groups
 .br
-all: awk \-F: \'/^all:/ {print $2}\' /etc/clustershell/groups
-.br
-list:   awk \-F: \'/^w/ {print $1}\' /etc/clustershell/groups
+list: awk \-F: \'/^w/ {print $1}\' /etc/clustershell/groups
 .br
 
 .br
@@ -149,7 +152,7 @@ System\-wide external node groups configuration file.
 .UNINDENT
 
 .SH SEE ALSO
-\fBclush\fP(1), \fBnodeset\fP(1)
+\fBclush\fP(1), \fBclubak\fP(1), \fBnodeset\fP(1)
 
 \fI\%http://clustershell.sourceforge.net/\fP
 
@@ -160,5 +163,5 @@ Stephane Thiell, CEA DAM  <stephane.thiell@cea.fr>
 .SH COPYRIGHT
 CeCILL-C V1
 
-.\" Generated by docutils manpage writer on 2010-04-08 10:23.
+.\" Generated by docutils manpage writer on 2010-06-16 23:12.
 .\" 
