@@ -7,7 +7,7 @@ Configuration file for ClusterShell external node groups
 --------------------------------------------------------
 
 :Author: Stephane Thiell, CEA DAM  <stephane.thiell@cea.fr>
-:Date:   2010-04-08
+:Date:   2010-06-16
 :Copyright: CeCILL-C V1
 :Version: 1.3
 :Manual section: 5
@@ -25,8 +25,8 @@ of several sections which may be present in any order. Sections are:
 
 Main
   General options definition
-*Group_namespace*
-  External commands definition for namespace *Group_namespace* (map, all, list and reverse)
+*Group_source*
+  External commands definition for group source *Group_source* (map, all, list and reverse)
 
 
 [Main]
@@ -34,12 +34,12 @@ Main
 Configuration parameters of the ``Main`` section are described below.
 
 default
-  Specify the default group namespace used by the NodeSet parser when the
-  user does not specify explicitly the namespace (eg. "@io").
+  Specify the default group source used by the NodeSet parser when the
+  user does not specify explicitly the group source (eg. "@io").
 
-*Group_namespace*
+*Group_source*
 -----------------
-Configuration parameters of each group namespace section are described below.
+Configuration parameters of each group source section are described below.
 
 map
   Specify the external shell command used to resolve a group name into a
@@ -48,11 +48,12 @@ map
   command.
 all
   Optional external shell command that should return a nodeset, list of
-  nodes or list of nodeset of all nodes for this group namespace. If not
-  specified, the library will try to resolve the group named ``all`` (@all). 
+  nodes or list of nodeset of all nodes for this group source. If not
+  specified, the library will try to resolve all nodes by using the ``list``
+  external command in the same group source followed by ``map`` for each group.
 list
   Optional external shell command that should return the list of all groups
-  for this group namespace (separated by space characters or by carriage
+  for this group source (separated by space characters or by carriage
   returns).
 reverse
   Optional external shell command used to find the group(s) of a single
@@ -67,8 +68,15 @@ is not doable. But if the call return zero, for instance, for a non-existing
 group, the user will not receive any error when trying to resolve such unknown
 group.  The desired behaviour is up to the system administrator.
 
+
+RESOURCE USAGE
+==============
+
+All external command results are cached in memory to avoid multiple calls.
+
+
 EXAMPLES
-===========
+========
 
 Simple configuration file for local groups and slurm partitions binding.
 
@@ -79,9 +87,8 @@ Simple configuration file for local groups and slurm partitions binding.
 | default: local
 | 
 | [local]
-| map: awk -F: '/^$GROUP:/ {print $2}' /etc/clustershell/groups
-| all: awk -F: '/^all:/ {print $2}' /etc/clustershell/groups
-| list:   awk -F: '/^\w/ {print $1}' /etc/clustershell/groups
+| map:  awk -F: '/^$GROUP:/ {print $2}' /etc/clustershell/groups
+| list: awk -F: '/^\w/ {print $1}' /etc/clustershell/groups
 | 
 | [slurm]
 | map: sinfo -h -o "%N" -p $GROUP
